Use parameters.dist to allow local modifications

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "fabpot/sphinx-php": "1.0.1",
         "akeneo/pim-community-dev": "1.7.*",
+        "incenteev/composer-parameter-handler": "2.1.1",
         "symfony/console": "~2.0"
     },
     "config": {
@@ -17,14 +18,20 @@
         }
     ],
     "scripts": {
-        "post-autoload-dump": [
-            "mkdir -p $(pwd)/app/config",
+        "symfony-scripts": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "ln -sf $(pwd)/vendor/akeneo/pim-community-dev/app/config/config.yml $(pwd)/app/config/",
             "ln -sf $(pwd)/vendor/akeneo/pim-community-dev/app/config/config_dev.yml $(pwd)/app/config/",
             "ln -sf $(pwd)/vendor/akeneo/pim-community-dev/app/config/security.yml $(pwd)/app/config/",
             "ln -sf $(pwd)/vendor/akeneo/pim-community-dev/app/config/pim_parameters.yml $(pwd)/app/config/",
             "php app/console asset:install || php app/console asset:install",
             "php app/console oro:assetic:dump"
+        ],
+        "post-install-cmd": [
+            "@symfony-scripts"
+        ],
+        "post-update-cmd": [
+            "@symfony-scripts"
         ]
     },
     "extra": {
